Mon Jan 14 15:29:55 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Don't check for strerror; Gnulib supplies a
	  replacement now.

Mon Jan 14 13:59:18 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Set the new file's mode to DBMODE in order to
	  try to defend against strange problems with databases being left
	  world-unreadable (Debian bug #430800).

Mon Jan 14 00:55:22 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/man-db.pot: Update.

Mon Jan 14 00:16:57 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1-pre2.
	* po/man-db.pot, po/*.po: Update.

Mon Jan 14 00:00:21 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog_test.c (parse_opt): Use argp_error rather than
	  error/argp_usage. Suggested by Ivan Shmakov.
	* src/man.c (parse_opt): Likewise.
	* src/manconv.c (parse_opt): Likewise.

Sun Jan 13 23:35:27 GMT 2008  Ivan Shmakov  <oneingray@gmail.com>

	Add a command-line option to man to enable groff warnings.

	* src/man.c (enum opts, struct string_llist): New types.
	  (default_roff_warnings, roff_warnings): Set defaults.
	  (options, parse_opt): Accept --warnings.
	  (make_roff_command): Add warnings to groff command line.
	* man/man1/man.man1 (SYNOPSIS, OPTIONS): Document --warnings.
	* docs/NEWS: Document this.

Thu Jan 10 09:24:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (local_man_loop): Guess language based on absolute path
	  to provided file, rather than relative (Debian bug #460014).

Mon Jan  7 17:28:54 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/xmalloc.patch: Add commentary.

Mon Jan  7 15:30:56 GMT 2008  Yuri Kozlov  <kozlov.y@gmail.com>

	* po/ru.po: Update from Translation Project.

Mon Jan  7 11:38:19 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/replace.sin: Rename to ...
	* man/replace.sin.in: ... this.
	* configure.ac (AC_CONFIG_FILES): Generate man/replace.sin.