@@ -56,14 +56,14 @@ LIBMANDB = $(top_builddir)/libdb/libmandb.a $(DBLIBS)
 accessdb_LDADD = $(LIBMANDB) $(LIBMAN)
 catman_LDADD = $(LIBMANDB) $(LIBMAN)
 globbing_LDADD = $(LIBMAN)
-lexgrog_LDADD = $(LIBMAN)
-man_LDADD = $(LIBMANDB) $(LIBMAN)
-manconv_LDADD = $(LIBMAN)
-mandb_LDADD = $(LIBMANDB) $(LIBMAN)
+lexgrog_LDADD = $(LIBMAN) $(LIBCOMPRESS)
+man_LDADD = $(LIBMANDB) $(LIBMAN) $(LIBCOMPRESS)
+manconv_LDADD = $(LIBMAN) $(LIBCOMPRESS)
+mandb_LDADD = $(LIBMANDB) $(LIBMAN) $(LIBCOMPRESS)
 manpath_LDADD = $(LIBMAN)
 whatis_LDADD = $(LIBMANDB) $(LIBMAN) $(LIBICONV)
 wrapper_LDADD = $(LIBMAN)
-zsoelim_LDADD = $(LIBMAN)
+zsoelim_LDADD = $(LIBMAN) $(LIBCOMPRESS)
 
 accessdb_SOURCES = \
 	accessdb.c \
